--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -10,6 +10,7 @@
 %\usepackage{german}
 \usepackage{times}
 \usepackage{csquotes}
+\usepackage{multirow}
 \usepackage{subfigure}
 \usepackage{geometry}
 \usepackage{csquotes}
