--- a/Doku/Bericht/4-development/software/graphics/main.tex
+++ b/Doku/Bericht/4-development/software/graphics/main.tex
@@ -20,39 +20,50 @@
     every node/.style={fill=white, font=\sffamily}, align=center]
     
   % Specification of nodes (position, etc.)
-  \node (start)             [activityStarts]              {Powersupply is started};
-  \node (initClock)     	[process, below of=start]          {initClk()};
-  \node (initGPIO)      	[process, below of=initClock]   {initGPIO()};
-  \node (disPwrKill)     	[process, below of=initGPIO]   {disablePwrKill()};
-  \node (enPwrEPD)     		[process, below of=disPwrKill]   {epdOn()};
-  \node (initUART)      	[process, below of=enPwrEPD] {initUART()};
-  \node (initSPI)      		[process, below of=initUART] {initSPI()};
+  \node (start)             [activityStarts]              {Power ON};
+  \node (initClock)     	[process, below of=start]          {Initialize controller};
+  \node (initGPIO)      	[process, below of=initClock]   {Disable power kill};
+  \node (disPwrKill)     	[process, below of=initGPIO]   {Power ON EPD};
+  \node (enPwrEPD)     		[process, below of=disPwrKill]   {Load template};
   
-  \node (receiveData)      	[activityRuns, below of=initSPI] {Receiving data via BLE};
-  \node (loadTemp)     		[process, left of=receiveData,xshift=-4cm,yshift=-1.5cm]   {epdLoadTemplate()};
-  \node (writeEpd)      	[activityRuns, below of=receiveData,yshift=-2cm] {Writes E-paper Display};
-  \node (Wait)      		[process, below of=writeEpd] {epdWait()};
-  \node (offEpd)      		[process,below of= Wait] {epdOff()};
+  \node (receiveData)      	[activityRuns, below of=enPwrEPD] {Fetch 20 bytes (UART)};
+  \node (loadTemp)     		[activityRuns, left of=receiveData,xshift=-4cm,yshift=-1.5cm]   {Fetch n-bytes (UART)};
+  \node (calfield)      	[activityRuns, below of=receiveData,yshift=-1.5cm] {Generate calender field};
+  \node (writefield)      	[activityRuns, below of=calfield] {Write to template};
+  
+   \node (calfields)      	[activityRuns, below of=loadTemp] {Generate calender fields};
+  \node (writefields)      	[activityRuns, below of=calfields] {Write to template};
+  
+  \node (show)      		[activityRuns, below of=writefield] {Refresh EPD};
+  \node (offEpd)      		[process,below of= show] {Power OFF EPD};
+  \node (off)      		[process,below of= offEpd] {Enable power kill};
 
-  \node (ActivityDestroyed) [startstop, below of=offEpd]
-                                                    {Powersupply is shut down};     
+  \node (ActivityDestroyed) [startstop, below of=off]
+                                                    {Power OFF};     
   % Specification of lines between nodes specified above
   % with aditional nodes for description 
   \draw[->]             (start) -- (initClock);
   \draw[->]     	(initClock) -- (initGPIO);
   \draw[->]      	(initGPIO) 	-- (disPwrKill);
   \draw[->]     	(disPwrKill)-- (enPwrEPD);
-  \draw[->]     	(enPwrEPD) 	-- (initUART);
-  \draw[->]     	(initUART) 	-- (initSPI);
-  \draw[->]     	(initSPI) 	-- (receiveData);
-  \draw[->]     		(receiveData) 	-- (writeEpd);
-  \draw[->]     	 (receiveData) -| node[text width=4cm]
-                                   {Loading empty template to display} (loadTemp);
-  \draw[->]      (loadTemp.south) |-node {Go to shut down}
-                                   (writeEpd);
-  \draw[->]       (writeEpd) --  (Wait);
-  \draw[->]    (Wait) -- (offEpd);
-  \draw[->]       (offEpd) --        (ActivityDestroyed);
+
+  \draw[->]     	(enPwrEPD) 	-- (receiveData);
+  \draw[->]     	(calfield) 	-- (writefield);
+  \draw[->]     	(writefield)-- (show); 
+  
+     
+  \draw[->]     	(receiveData) 	-- node[text width=4cm]
+  {If one calender field is updated}(calfield);
+  \draw[->]     	(receiveData) -| node[text width=4cm]
+                                   {If multiple calender fields are updated} (loadTemp);
+  \draw[->]      	(loadTemp.south) --(calfields);
+    \draw[->]      	(calfields) --(writefields);
+    
+    \draw[->]      	(writefields) |-(show);
+  \draw[->]       	(show) --  (offEpd);
+
+   \draw[->]       	(offEpd) -- (off);
+  \draw[->]       	(off) -- (ActivityDestroyed);
  
   \end{tikzpicture}
 \end{document}
