Software and theory

--- a/Doku/Bericht/2-theory/drawing-graphics/graphic.tex
+++ b/Doku/Bericht/2-theory/drawing-graphics/graphic.tex
@@ -56,9 +56,9 @@ To eliminate the
 
 
 
-\subsubsection{Compressed fonts}\label{chapter:CompressedFonts}
+\subsubsection{Compressed fonts}\label{theory:CompressedFonts}
 
-The theory shown in this chapter \ref{chapter:CompressedFonts} is only valid if the fonts used are simple fonts which are using only two different values. More complex fonts have to be compressed in a different way to avoid data loss. 
+The theory shown in this section is only valid if the fonts used are simple fonts which are using only two different values. More complex fonts have to be compressed in a different way to avoid data loss. 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\textwidth]{2-theory/drawing-graphics/graphics/font12.pdf}
