--- a/Doku/Bericht/4-development/software/software.tex
+++ b/Doku/Bericht/4-development/software/software.tex
@@ -1,3 +1,7 @@
+
+
+
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/software/graphics/sequence.pdf}
@@ -7,45 +11,7 @@
 
 \subsection{Receiver}
 
-
-\subsubsection{Microcontroller}
-The main controller of the receiver is the STM32. To develop firmware for the microcontroller the Hardware abstractions layer provided by STMicroelectronics is used. The firmware running on the STM32 is responsible for the following tasks:
-\begin{itemize}[H]
-	\item[-] Initialize the IT8951 display driver chip
-	\item[-] Receive data via UART from the BLE module
-	\item[-] Generating the displayed image data from a template
-	\item[-] Writing received text strings to the EPD
-	\item[-] Writing the image data to the display driver via SPI
-	\item[-] Control the power supply of all the different components
-\end{itemize}
-\paragraph{Configurations}
-
-\begin{center}
-	\begin{tabular}{ |c|c|c|c|c| } 
-		\hline
-		Description & Function &Pin number & Speed& Properties \\
-		\hline
-		\multirow{4}{4em}{SPI} 	& Chip select & PA0& &No Pull-up/-down \\ 
-								& Clock& PA1 & 14.0 MBits/s&No Pull-up/-down \\ 
-								& MISO & PA6&14.0 MBits/s & No Pull-up/-down  \\ 
-								& MOSI & PA7& 14.0 MBits/s&No Pull-up/-down  \\ 
-		\hline
-		\multirow{2}{4em}{UART} & TX & PC10 & 115.2 kBits/s & Pull-up   \\ 
-								& RX & PC11 & 115.2 kBits/s & Pull-up \\ 
-	\hline
-	\end{tabular}
-\end{center}
-\begin{figure}[H]
-	\centering
-	\includegraphics[height=0.8\textheight]{4-development/software/graphics/main.pdf}
-	\caption{STM32 program flow chart\label{software:main}}
-\end{figure}
-In the flowchart\ref{software:main} it is visible that the controller itself never enters a deep sleep mode in the end of an program cycle. Instead the controller runs trough a power kill sequence which disables the own power supply. As a result of this the controller and remaining hardware consume no power instead of their deep sleep power consumption. 
-
-\paragraph{Template}
-The calendar template is getting preloaded in the flash of the STM32. To save memory, the file is converted into an $1200 \times 825$ PNG with the colour depth of 4 bit. The PNG then is used to create a .c file which holds an one dimensional array with all the pixel data in it.
-
-\paragraph{Writing characters}
+% C Style configuration
 \lstdefinestyle{mystyle}{
 	language=c,
 	tabsize=4,
@@ -61,6 +27,116 @@ The calendar template is getting preloaded in the flash of the STM32. To save me
 }
 \lstset{style=mystyle}
 
+
+\subsubsection{Microcontroller}
+The main controller of the receiver is the STM32. To develop firmware for the microcontroller the Hardware abstractions layer provided by STMicroelectronics is used. The firmware running on the STM32 is responsible for the following tasks:
+\begin{itemize}[H]
+	\item[-] Initialize the IT8951 display driver chip
+	\item[-] Receive data via UART from the BLE module
+	\item[-] Generating the displayed image data from a template
+	\item[-] Writing received text strings to the EPD
+	\item[-] Writing the image data to the display driver via SPI
+	\item[-] Control the power supply of all the different components
+\end{itemize}
+%\vfill
+
+\paragraph{Configurations}
+The STM32 uses two bus interfaces and some extra GPIO's to communicate and control the EPD, nRF52480 and power supply. All used pins in these interfaces are listed in the table\ref{table:stm32}.  
+
+\begin{table}[!ht]
+	\begin{tabular}{ |c|c|c|c|c|c| } 
+		\hline
+	Description & Function &Pin number & Speed& Properties& mode \\
+		\hline
+	\multirow{4}{4em}{SPI} 	& Chip select & PA0&14.0 MBits/s &No Pull-up/-down& Output \\ 
+								& Clock& PA1 & 14.0 MBits/s&No Pull-up/-down& Push Pull \\ 
+								& MISO & PA6&14.0 MBits/s & No Pull-up/-down& Push Pull  \\ 
+								& MOSI & PA7& 14.0 MBits/s&No Pull-up/-down& Push Pull  \\ 
+		\hline
+	\multirow{2}{4em}{UART} & TX & PC10 & 115.2 kBits/s & Pull-up& Push Pull   \\ 
+								& RX & PC11 & 115.2 kBits/s & Pull-up& Push Pull \\ 
+	\hline
+	
+	\multirow{2}{4em}{Power kill} & Enable & PC3 & 112MHz &No Pull-up/-down& Output   \\ 
+										  & Disable& PC0 & 122MHz &No Pull-up/-down& Output \\ 
+	\hline
+	
+	\multirow{2}{4em}{EPD interface} & Reset & PA4 & 112MHz &No Pull-up/-down& Output   \\ 
+									& HARDY& PA5 & 122MHz &No Pull-up/-down& Output \\ 
+	\hline
+
+	\end{tabular}
+	\caption{Table of the STM32 pin configuration\label{table:stm32}}
+\end{table}
+
+%\clearpage
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.8\textheight]{4-development/software/graphics/main.pdf}
+	\caption{STM32 program flow chart\label{software:main}}
+\end{figure}
+In the flowchart\ref{software:main} it is visible that the controller itself never enters a deep sleep mode in the end of an program cycle. Instead the controller runs trough a power kill sequence which disables the own power supply. As a result of this the controller and remaining hardware consume no power instead of their deep sleep power consumption. 
+
+\paragraph{Template}
+The calendar template is getting preloaded in the flash of the STM32. To save memory, the file is converted into an $1200 \times 825$ PNG with the colour depth of 4 bit. The PNG then is used to create a .c file which holds an one dimensional array with all the pixel data in it. The pixel location is mapped to the memory as shown in figure\ref{theory:matrix}. 
+
+\begin{figure}[H]
+	\begin{lstlisting}
+const unsigned char Kalender[]={0xff,0xff,0xff,0xff,0xff,0xff,0xff,...
+								0xff,0xff,0xff,0xff,0xff,0xff,0xff,...
+								.
+								.
+								.
+								0xdd,0xdd,0xdd,0xdd,0xdd,0xdd,0xdd};
+	\end{lstlisting}
+\end{figure}
+Each Hex number resembles two pixels of each four bit. The template used is an example calender over one day. In the template shown in image\ref{software:kalender}, there are already some information given like the calendar week and weekdays.
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.6\textwidth]{4-development/software/graphics/Kalender.png}
+	\caption{Example calender used as an template\label{software:kalender}}
+\end{figure}
+
+
+\paragraph{Fonts}
+All fonts used are generated .c files which are holding two arrays. First one holds all different ASCII characters, while the second array holds the font information. Important informations stored are the width and height of each font. All characters have the compressed layout as described in the theory part\ref{theory:CompressedFonts} in the beginning.
+\begin{figure}[H]
+	\begin{lstlisting}
+const uint8_t Font12_Table[] = 
+{
+	.
+	.
+	.,
+	// @396 'A' (7 pixels wide)
+	0x00, //        
+	0x30, //   ##   
+	0x10, //    #   
+	0x28, //   # #  
+	0x28, //   # #  
+	0x28, //   # #  
+	0x7C, //  ##### 
+	0x44, //  #   # 
+	0xEE, // ### ###
+	0x00, //        
+	0x00, //        
+	0x00, // 
+	.
+	.
+	. 
+	};
+	
+	sFONT Font12 = {
+	Font12_Table,
+	7, /* Width */
+	12, /* Height */
+	};
+	\end{lstlisting}
+\end{figure}
+
+\paragraph{Writing characters}
+To write the desired characters to a image buffer the pixel data needs to be converted and placed in the right spot of the image buffer. Following code part\ref{software:drawchar} shows the implemented algorithm to handle this task.  
 \begin{figure}[ht!]
 	\begin{lstlisting}
 void drawChar(uint16_t Xpt, uint16_t Ypt, const char Acsii_Char,
@@ -104,6 +180,7 @@ void drawChar(uint16_t Xpt, uint16_t Ypt, const char Acsii_Char,
 	}
 }
 	\end{lstlisting}
+	\label{software:drawchar}
 \end{figure}
 \begin{figure}[ht!]
 \begin{lstlisting}
