--- a/Doku/Bericht/00-abbreviations/00-abbreviations.tex
+++ b/Doku/Bericht/00-abbreviations/00-abbreviations.tex
@@ -15,6 +15,11 @@
 	\acro{cpu}[CPU]{Central Processing Unit}
 \end{acronym}
 
+%E
+\begin{acronym}
+	\acro{epd}[EPD]{E-Paper Display}
+\end{acronym}
+
 %F
 \begin{acronym}
 	\acro{fifo}[FIFO]{First In First Out}
