--- a/Doku/Bericht/2-theory/drawing-graphics/graphics/drawingfont.tex
+++ b/Doku/Bericht/2-theory/drawing-graphics/graphics/drawingfont.tex
@@ -91,7 +91,7 @@
 	\draw[-latex,thick] (7,0) node[right]{\Large Compressed font}
 	to[out=180,in=90] (6,-3.5);
 	
-	\draw[<->,>=stealth, very thick](7.1,-3.6)--(7.1,-4.5) node[midway,right] {\Large 1bit color depth};
+	\draw[<->,>=stealth, very thick](7.1,-3.6)--(7.1,-4.5) node[midway,right] {\Large 1bit colour depth};
 	
 	%\draw[-latex-,thick] (-3+14,2.5-9)to(-1.2+14,1-9);
 	
