--- a/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
+++ b/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
@@ -1,5 +1,5 @@
 There are several different technologies which are applied in e-paper displays.
-But since the developed prototype uses a microencapsulated electrophoretic display, this section only describes this specific implementation.
+Since the developed prototype uses a microencapsulated electrophoretic display, this section only describes this specific implementation.
 
 A film consisting of microscopic capsules is coated onto a backplane, which basically is a matrix of electrodes.
 On top of that comes a common electrode, called the frontplane.
