--- a/Doku/Bericht/1-intro/1-intro.tex
+++ b/Doku/Bericht/1-intro/1-intro.tex
@@ -14,4 +14,4 @@ In order to clarify the application of the terms in the following sections, the 
 This end solely consists of a computer, a wireless interface (for the main communication) and the transmitter module (for the wakeup receiver). A short python script enables the user to define which data the receiver should display over a fixed template. The information is transferred to a wireless interface, which transmits it to the receiver end after the receiver is woken up.
 
 \paragraph{Receiver}
-This part of the prototype has been designed to reduce the power consumption as far as possible. Therefore, a \acs{epd} is used, which has the advantage of being a static display (it maintains its screen image even when disconnected from the power supply). In combination with the \acs{epd} a wireless module receives information from the transmitter. It can also response with a feedback about the status. This connection should be bi-directional. In order to process the incoming data and displaying it correctly on the screen, a microcontroller is used. All the above mentioned components  are completely disconnected from the power supply when not used. The power is provided by a super capacitor which is charged by solar cells. When the device  is switched off the only component that actively consumes power is the wakeup receiver. This module is constantly in listening mode and waits for a wakeup event. If the wakeup receiver is given such an event, it activates a self-holding circuit resulting in the connection to the power supply of all other components. Now data can be exchanged through a different channel, established by the wireless module. After the data is processed and the display is refreshed, the microcontroller deactivates the self-holding and therefore disconnects all components except the wakeup receiver from the power source.
+This part of the prototype has been designed to reduce the power consumption as far as possible. Therefore, ans \acs{epd} is used, which has the advantage of being a static display (it maintains its screen image even when disconnected from the power supply). In combination with the \acs{epd} a wireless module receives information from the transmitter. It can also response with a feedback about the status. This connection should be bi-directional. In order to process the incoming data and displaying it correctly on the screen, a microcontroller is used. All the above mentioned components  are completely disconnected from the power supply when not used. The power is provided by a super capacitor which is charged by solar cells. When the device  is switched off the only component that actively consumes power is the wakeup receiver. This module is constantly in listening mode and waits for a wakeup event. If the wakeup receiver is given such an event, it activates a self-holding circuit resulting in the connection to the power supply of all other components. Now data can be exchanged through a different channel, established by the wireless module. After the data is processed and the display is refreshed, the microcontroller deactivates the self-holding and therefore disconnects all components except the wakeup receiver from the power source.
