--- a/Doku/Bericht/2-theory/drawing-graphics/graphics/buffer.tex
+++ b/Doku/Bericht/2-theory/drawing-graphics/graphics/buffer.tex
@@ -12,34 +12,34 @@
 \def\buff at (#1,#2){
 	
 	\draw[very thick](-5+#1, -0.5+#2) rectangle (7+#1,6.5+#2);
-	\node[anchor=center] at (5+#1, 3.7+#2) {Displayscreen};
+	\node[anchor=center] at (5+#1, 3.7+#2) {\large Display};
 	\draw(3.5+#1,1.5+#2) rectangle (6.5+#1,3.5+#2);
 	
-	\node[anchor=center] at (0.5+#1, 5.2+#2) {Buffer1};
+	\node[anchor=center] at (0.5+#1, 5.2+#2) {\large Buffer 1};
 	\draw(-1+#1,3+#2) rectangle (2+#1,5+#2);
 	
-	\node[anchor=center] at (0.5+#1, 2.2+#2) {Buffer2};
+	\node[anchor=center] at (0.5+#1, 2.2+#2) {\large Buffer 2};
 	\draw(-1+#1,0+#2) rectangle (2+#1,2+#2);
 	
-	\node[anchor=center] at (0.5+#1, 5.9+#2) {Memory};
+	\node[anchor=center] at (0.5+#1, 5.9+#2) {\large Memory};
 	\draw(-1.2+#1,-0.2+#2) rectangle (2.2+#1,5.7+#2);
 	
-	\node[anchor=center] at (-4+#1, 2.5+#2) {Processor};
+	\node[anchor=center] at (-4+#1, 2.5+#2) {\large Processor};
 }
 
 
 
 % first write
-\node[anchor=center] at (0.5, 4) {Hello World};
-\draw[->,>=stealth](-3,2.5)--(-1.2,4) node[midway,above, sloped] {\footnotesize write data};
-\draw[->,>=stealth](2.2,1)->(3.5,2.5) node[midway,above, sloped] {\footnotesize show buffer};
+\node[anchor=center] at (0.5, 4) {\large Hello World};
+\draw[->,>=stealth](-3,2.5)--(-1.2,4) node[midway,above, sloped] {\large write};
+\draw[->,>=stealth](2.2,1)->(3.5,2.5) node[midway,above, sloped] {\large show};
 
 
 % second write
-\node[anchor=center] at (14+0.5, 4) {Hello World};
-\node[anchor=center] at (14+5, 2.5) {Hello World};
-\draw[->,>=stealth](14+-3,2.5)--(14+-1.2,1) node[midway,above, sloped] {\footnotesize write data};
-\draw[->,>=stealth](14+2.2,4)->(14+3.5,2.5) node[midway,above, sloped] {\footnotesize show buffer};
+\node[anchor=center] at (14+0.5, 4) {\large Hello World};
+\node[anchor=center] at (14+5, 2.5) {\large Hello World};
+\draw[->,>=stealth](14+-3,2.5)--(14+-1.2,1) node[midway,above, sloped] {\large write};
+\draw[->,>=stealth](14+2.2,4)->(14+3.5,2.5) node[midway,above, sloped] {\large show};
 \draw[->,>=stealth, gray, dashed](-3+14,2.5)--(-1.2+14,4);
 \draw[->,>=stealth, gray, dashed](2.2+14,1)->(3.5+14,2.5);
 \draw[->,>=stealth, gray, dashed](-1.5+14,3.5)arc(10:-15:4);
@@ -52,8 +52,8 @@
 
 
 % third write
-\draw[->,>=stealth](-3,2.5-9)--(-1.2,4-9) node[midway,above, sloped] {\footnotesize write data};
-\draw[->,>=stealth](2.2,1-9)->(3.5,2.5-9) node[midway,above, sloped] {\footnotesize show buffer};
+\draw[->,>=stealth](-3,2.5-9)--(-1.2,4-9) node[midway,above, sloped] {\large write};
+\draw[->,>=stealth](2.2,1-9)->(3.5,2.5-9) node[midway,above, sloped] {\large show};
 \draw[->,>=stealth, gray, dashed](-3,2.5-9)--(-1.2,1-9);
 \draw[->,>=stealth, gray, dashed](2.2,4-9)->(3.5,2.5-9);
 
@@ -71,8 +71,8 @@
 
 
 % fourth write
-\draw[->,>=stealth](-3+14,2.5-9)--(-1.2+14,1-9) node[midway,above, sloped] {\footnotesize write data};
-\draw[->,>=stealth](2.2+14,4-9)->(3.5+14,2.5-9) node[midway,above, sloped] {\footnotesize show buffer};
+\draw[->,>=stealth](-3+14,2.5-9)--(-1.2+14,1-9) node[midway,above, sloped] {\large write};
+\draw[->,>=stealth](2.2+14,4-9)->(3.5+14,2.5-9) node[midway,above, sloped] {\large show};
 \draw[->,>=stealth, gray, dashed](-3+14,2.5-9)--(-1.2+14,4-9);
 \draw[->,>=stealth, gray, dashed](2.2+14,1-9)->(3.5+14,2.5-9);
 
@@ -96,15 +96,14 @@
 \buff at (14,0);
 \buff at (0,-9);
 \buff at (14,-9);
-\draw[->,>=stealth,very thick](7,2.5)--(9,2.5);
-\draw[->,>=stealth,very thick](9,-0.5)--(7,-2.5);
-\draw[->,>=stealth,very thick](7,2.5-9)--(9,2.5-9);
+\draw[->,>=stealth,very thick](7.2,2.5)--(8.8,2.5);
+\draw[->,>=stealth,very thick](8.8,-0.7)--(7.2,-2.3);
+\draw[->,>=stealth,very thick](7.2,2.5-9)--(8.8,2.5-9);
 
-\node[] at (0.5, -0.8) {Step 1: Write data in buffer1};
-\node at (14.5, -0.8) {Step 2: Write data in buffer2 and show buffer1 on display};
-
-\node[] at (0.5, -2.2) {Step 3: Write data in buffer1 and show buffer 2 on display};
-\node at (14.5, -2.2) {Step 4: Write data in buffer2 and show buffer1 on display};
+\node[left] at (1, -0.8) {\large Step 1: Write data in buffer 1};
+\node[left] at (20.3, -0.8) {\large Step 2: Write data in buffer 2 and show buffer 1 on display};
+\node[left] at (6.4, -9.8) {\large Step 3: Write data in buffer 1 and show buffer 2 on display};
+\node[left] at (20.3, -9.8) {\large Step 4: Write data in buffer 2 and show buffer 1 on display};
 \end{scope}
 
 
