--- a/Doku/Bericht/2-theory/drawing-graphics/graphics/drawingfont8red.tex
+++ b/Doku/Bericht/2-theory/drawing-graphics/graphics/drawingfont8red.tex
@@ -5,7 +5,7 @@
 	\pagestyle{empty}
 	
 	\def\col{red}
-	\begin{tikzpicture}[scale=.5,every node/.style={minimum size=1cm},on grid]\sffamily
+	\begin{tikzpicture}[scale=.5,every node/.style={minimum size=1cm},on grid]
 	%\draw[very thick] (-14,-10) rectangle (14,10);
 	
 	%slanting: production of a set of n 'laminae' to be piled up. N=number of grids.
@@ -105,7 +105,7 @@
 	\draw[-latex,thick] (7,7) node[right]{\Large Compressed font}
 	to[out=180,in=90] (6,3.5);
 	
-	\draw[<->,>=stealth, very thick](7.3,3.5)--(7.3,-4.5) node[midway,right] {\Large 8bit color depth};
+	\draw[<->,>=stealth, very thick](7.3,3.5)--(7.3,-4.5) node[midway,right] {\Large 8 bit colour depth};
 	
 	%\draw[-latex-,thick] (-3+14,2.5-9)to(-1.2+14,1-9);
 	
