--- a/Doku/Bericht/references.bib
+++ b/Doku/Bericht/references.bib
@@ -32,6 +32,14 @@
 	keywords = {manual}
 }
 
+@manual{IT8951,
+	organisation = {iTE Tech. Inc.},
+	title =  {{IT8951 Programming Guide (Host I90 Command Based)}},
+	year          =  2019,
+	month         =  01,
+	keywords = {manual}
+}
+
 @manual{adp,
 	organisation = {Analog Devices},
 	title =  {{Ultralow Power Boost Regulator with MPPT and Charge Management }},
